# online-chat-proj

./: .gitignore  CMakeLists.txt  main.cpp
apps/: CMakeLists.txt  client.cpp  main.cpp  server.cpp  test-main.cpp
inc/: Connection.hpp  Epoll.hpp  EventLoop.hpp  InetAddress.hpp  Server.hpp  Socket.hpp
inc/log/: util.hpp
inc/opengauss/: GaussConnector.hpp
inc/opengauss/tables/: Table.hpp  UserInfo.hpp
inc/pools/: DBConnectPool.hpp  MemoryPool.hpp
inc/threadpool/: ThreadPool.hpp
libs/: libcjson.so.1.7.15  libcom_err_gauss.so.3.0  libconfig.so.4  libcrypto.so.1.1  libgssapi_krb5_gauss.so.2.2  libgssrpc_gauss.so.4.2  libk5crypto_gauss.so.3  libkrb5_gauss.so.3  libkrb5support_gauss.so.0  libpgport_tool.so.1  libpq.so.5.5  libpq_ce.so.5.5  libssl.so.1.1  libstdc++.so.6
src/: CMakeLists.txt  Connection.cpp  Epoll.cpp  EventLoop.cpp  InetAddress.cpp  Server.cpp  Socket.cpp
src/log/: util.cpp
src/opengauss/: GaussConnector.cpp
src/opengauss/tables/: Table.cpp  UserInfo.cpp
src/pools/: DBConnectPool.cpp
src/threadpool/: ThreadPool.cpp
