set(ONLINE_CHAT_SERVER "server")

cmake_minimum_required(VERSION 3.10)
project(
    "${ONLINE_CHAT_SERVER}"
    VERSION 1.0.0
    PROJECT_DESCRIPTION "PROJECT 'online chat' WITH OPENGAUSS AS THE BACKUP DATABASE"
    LANGUAGE C CXX
)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
set(ONLINE_SERVER_INC_PATH "${CMAKE_CURRENT_SOURCE_DIR}/inc")

add_subdirectory(src)
add_subdirectory(apps)

